feat(content): more work on resume page and some work on blog page

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -28,9 +28,20 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
           <div class="skills">
             <h4>SKILLS</h4>
             <ul>
-              <li>Skill #1</li>
-              <li>Skill #2</li>
-              <li>Skill #3</li>
+              <li>Amazon Web Services (AWS)</li>
+              <li>CI/CD</li>
+              <li>Infrastructure as code (IaC)</li>
+              <li>Containerization</li>
+              <li>Monitoring</li>
+              <li>Powershell</li>
+              <li>Problem Solving</li>
+              <li>Collaboration</li>
+              <li>Communication</li>
+              <li>Adaptability</li>
+              <li>Project Management</li>
+              <li>Cloud Migration</li>
+              <li>Certified Kubernetes Admin (CKA)</li>
+            </ul>
           </div>
           <div class="awards">
             <h4>AWARDS</h4>
@@ -96,13 +107,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
   .education,.skills,.awards,.objective,.experience {
     margin: 2em 0;
   }
-  .education p {
-    margin: 0;
-  }
-  .awards p {
-    margin: 0;
-  }
-  .experience p {
+  p {
     margin: 0;
   }
   .right {
